# RPG-Trivia-CPP

./: .gitignore  CMakeLists.txt  imgui.ini
assets/json/: biologia.json  entretenimento.json  esportes.json  fisica.json  geografia.json  historia.json  matematica.json  quimica.json  variedades.json
src/: main.cpp  rpg.cpp
src/data/: GameData.h
src/entities/: Character.h
src/systems/: QuestionManager.h
